update swapi demo

--- a/examples/sw/v3/film.html
+++ b/examples/sw/v3/film.html
@@ -3,23 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>SWAPI Demo - Film Details</title>
     <link rel="stylesheet" href="styles.css" />
     <script src="film.js" type="module"></script>
   </head>
   <body>
-    <h1>Swapi</h1>
+    <h1>Swapi Demo</h1>
     <main>
-      <section id="output">
-        <h2 class="film-name"></h2>
-        <p class="crawl"></p>
-        <section class="planets">
-          <h3>Planets</h3>
-          <ul class="film-planets"></ul>
-          <h3>Starships</h3>
-          <ul class="film-starships"></ul>
-        </section>
-      </section>
+      <section class="film-details" id="output"></section>
     </main>
   </body>
 </html>
