--- a/examples/sw/v3/index.html
+++ b/examples/sw/v3/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Swapi demo</title>
     <link rel="stylesheet" href="styles.css" />
     <script src="main.js" type="module"></script>
   </head>
   <body>
-    <h1>Swapi</h1>
+    <h1>Swapi Demo</h1>
     <main>
       <ul id="films" class="film-list"></ul>
     </main>
