--- a/prepare/v3/week05.html
+++ b/prepare/v3/week05.html
@@ -28,6 +28,33 @@
         <h2>Reading</h2>
         <ol>
           <li>
+            Read
+            <a
+              href="https://javascript.info/fetch"
+              target="_blank"
+              rel="noreferrer"
+              >3.1 Fetch</a
+            >
+          </li>
+          <li>
+            Read
+            <a
+              href="https://javascript.info/fetch-crossorigin"
+              target="_blank"
+              rel="noreferrer"
+              >3.5 Fetch: Cross-Origin Requests</a
+            >
+          </li>
+          <li>
+            Read
+            <a
+              href="https://javascript.info/rest-parameters-spread"
+              target="_blank"
+              rel="noreferrer"
+              >6.2 Rest parameters and spread syntax</a
+            >
+          </li>
+          <li>
             Complete
             <a
               href="https://learn.svelte.dev/tutorial/welcome-to-svelte"
@@ -35,34 +62,25 @@
               rel="noreferrer"
               >Svelte Tutorial</a
             >
-            Complete the first 4 sections of Part 1 this week: Introduction,
-            Reactivity, Props, and Logic.
+            Complete the last 4 sections of Part 1 this week: Events, Bindings,
+            Lifecycle, and Stores.
           </li>
           <li>
             Read
             <a
-              href="https://javascript.info/debugging-chrome"
+              href="https://blog.pshrmn.com/how-single-page-applications-work/"
               target="_blank"
               rel="noreferrer"
-              >3.1 Debugging in the browser</a
+              >How Single-Page Applications Work</a
             >
           </li>
           <li>
             Read
             <a
-              href="https://javascript.info/coding-style"
+              href="https://gomakethings.com/the-problem-with-single-page-apps/"
               target="_blank"
               rel="noreferrer"
-              >3.2 Coding Style</a
-            >
-          </li>
-          <li>
-            Read
-            <a
-              href="https://javascript.info/try-catch"
-              target="_blank"
-              rel="noreferrer"
-              >10.1 Error handling, "try...catch"</a
+              >The Problem with Single Page Apps</a
             >
           </li>
         </ol>
