--- a/ponder/v3_6/team03.html
+++ b/ponder/v3_6/team03.html
@@ -193,7 +193,7 @@ export default {
                 <p>
                   There is one more thing you will probably want to do to finish
                   your setup. There is a very nice VS Code extension for Svelte
-                  that will make your much life easier. It's called "Svelte for
+                  that will make your life much easier. It's called "Svelte for
                   VS Code". Each member of the team should install it.
                 </p>
               </div>
