--- a/resources/workflow-info-only.html
+++ b/resources/workflow-info-only.html
@@ -24,14 +24,14 @@
           Development workflow has become quite complicated for Web development.
           Let's take a medium-sized project for example. It could have dozens of
           JavaScript files, several CSS files, 3rd party libraries, and who
-          knows how many icons, fonts, images, etc. involved. It might be
-          using a CSS preprocessor like SASS or it could be transpiling the
-          JavaScript to make sure that new features will work in older browsers.
+          knows how many icons, fonts, images, etc. involved. It might be using
+          a CSS preprocessor like SASS or it could be transpiling the JavaScript
+          to make sure that new features will work in older browsers.
         </p>
         <div class="callout">
           <p>
-            Here is a potential list of tasks that could need to happen every time
-            something changes:
+            Here is a potential list of tasks that could need to happen every
+            time something changes:
           </p>
           <ol>
             <li>Lint CSS and JavaScript to find any coding issues.</li>
@@ -42,13 +42,17 @@
             <li>Compile all SCSS/LESS to CSS</li>
             <li>Concatenate all CSS into one file for faster loading</li>
             <li>Minify the CSS to reduce file size</li>
-            <li>Transpile JavaScript with Babel for wider support for older
-              browsers</li>
+            <li>
+              Transpile JavaScript with Babel for wider support for older
+              browsers
+            </li>
             <li>Concatenate all JS files into one file for faster loading</li>
             <li>Minify and Uglify JavaScript to reduce size</li>
             <li>Do the same for any 3rd party CSS or JS</li>
-            <li>Move all the production assets into a distribution directory to
-              separate them from the development stuff</li>
+            <li>
+              Move all the production assets into a distribution directory to
+              separate them from the development stuff
+            </li>
           </ol>
           <p>Whew! That's a big list...and they have to happen A LOT!</p>
         </div>
@@ -59,24 +63,24 @@
         </p>
         <ol>
           <li>
-            <strong>Package managers:</strong> These keep track of all of the external
-            dependencies for our app. This includes development tools and libraries we
-            might be using. It not only knows which packages to download, but it
-            tracks versions as well. We are using <code>npm</code> for our
-            package manager.
+            <strong>Package managers:</strong> These keep track of all of the
+            external dependencies for our app. This includes development tools
+            and libraries we might be using. It not only knows which packages to
+            download, but it tracks versions as well. We are using
+            <code>npm</code> for our package manager.
           </li>
           <li>
-            <strong>Bundlers:</strong> Bundlers handle the compiling, transpiling, concatenating,
-            minifying, and moving around of assets in our project. We are using
-            <code>Snowpack</code> as our bundler. Other common bundlers are
-            Parcel and Webpack.
+            <strong>Bundlers:</strong> Bundlers handle the compiling,
+            transpiling, concatenating, minifying, and moving around of assets
+            in our project. We are using <code>Vite</code> as our bundler. Other
+            common bundlers are Parcel and Webpack.
           </li>
           <li>
-            <strong>Task managers:</strong> These keep track of what needs to be done and when.
-            There will generally be scripts defined in the task manager for each
-            phase of development. Our project is fairly simple so we are just
-            using <code>npm</code> again for task manager. Other common managers
-            are Grunt or Gulp.
+            <strong>Task managers:</strong> These keep track of what needs to be
+            done and when. There will generally be scripts defined in the task
+            manager for each phase of development. Our project is fairly simple
+            so we are just using <code>npm</code> again for task manager. Other
+            common managers are Grunt or Gulp.
           </li>
         </ol>
         <p>
