--- a/ponder/v3_6/team04.html
+++ b/ponder/v3_6/team04.html
@@ -385,7 +385,7 @@ export const cartCount = writable(getCartCount());
                 really nice shortcut for automatically subscribing a component
                 to a store: <code>$</code>
               </p>
-              <pre><code class="lang-markup">// ProductList.svelte
+              <pre><code class="lang-markup">// MainHeader.svelte
 &lt;script&gt;
 import { cartCount } from "./stores.mjs";
 // we don't need the prop anymore
