--- a/ponder/v3_6/team05.html
+++ b/ponder/v3_6/team05.html
@@ -145,8 +145,9 @@
               <p>
                 Each of the category elements should link to
                 <kbd>product-list/index.html</kbd>. Make sure to pass the
-                correct category as part of the URL. (tents, backpacks,
-                sleeping-bags, hammocks).
+                correct category as part of the URL. (<strong
+                  >tents, backpacks, sleeping-bags, hammocks</strong
+                >).
               </p>
               <p>
                 If you need a reminder of how to add a URL parameter to a link
