update node setup link

--- a/resources/software-setup-block.html
+++ b/resources/software-setup-block.html
@@ -75,10 +75,10 @@
                 Support) version of node. Follow the instructions for your
                 operating system found in this
                 <a
-                  href="https://byui-cit.github.io/advcss/lesson01/l01-software.html"
+                  href="https://byui-cit.github.io/learning-modules/modules/general/node-installation/"
                   target="_blank"
                   rel="noreferrer"
-                  >software setup page</a
+                  >Node setup page</a
                 >.
               </p>
 
